# main-line

./: .gitignore  Dockerfile.api_client  Dockerfile.api_client_v2  Dockerfile.backend  Dockerfile.backend_lib  Dockerfile.backend_old  Dockerfile.frontend  Dockerfile.openapi_spec  Dockerfile.rust_workspace  Dockerfile.stockfish  OUTDATED.md  README.md  docker-compose.yml  scraped.Dockerfile.api_client_v2
.github/: copilot-instructions.md
data/: README.md
docs/current_work/: README.md
docs/practices/: password_storage.md
frontend/: global.d.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: config.ts  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/_chess/: against_bot_random.ts  common.ts  same_device.ts
frontend/app/_components/: Footer.tsx  LoadingSpinner.tsx  LogoutButton.tsx  TopNavBar.tsx
frontend/app/_util/: base64.ts  cookies.ts  runtime.ts  types.ts
frontend/app/analyze/: AnalysisMenu.tsx  layout.tsx  page.tsx
frontend/app/login/: LoginForm.tsx  actions.ts  config.ts  layout.tsx  page.tsx  shared.ts
frontend/app/same-device/: Chessboard.tsx  layout.tsx  page.tsx
frontend/app/user/[id]/: page.tsx
frontend/app/user/[userId]/: UserAvatar.tsx  actions.ts  layout.tsx  page.tsx
gen-api-client/: bun.lockb  index.js  package-lock.json  package.json
gen-api-client/api-client-template/: README.md  package-lock.json  package.json  tsconfig.json
gen-api-client/api-client-template/src/: common.ts  index.ts
k8s/: gateway.yaml  kustomization.yaml
k8s/backend/: configmap.yaml  deployment.yaml  httproute-direct.yaml  httproute.yaml  service.yaml
k8s/base/: cluster-admin-role-binding.yaml
k8s/grafana-alloy/: config.alloy  values.yaml
k8s/grafana-dashboard/: httproute-direct.yaml  service.yaml  values.yaml
k8s/grafana-dashboard/httproute/: Chart.yaml  values.yaml
k8s/grafana-dashboard/httproute/templates/: httproute.yaml
k8s/kubernetes-dashboard/: httproute-direct.yaml
k8s/kubernetes-dashboard/httproute/: Chart.yaml  values.yaml
k8s/kubernetes-dashboard/httproute/templates/: httproute.yaml
k8s/metallb/: Chart.yaml  values.yaml
k8s/metallb/templates/: ipaddresspool.yaml  l2advertisement.yaml
k8s/minio/: Chart.yaml  README.md  values.yaml
k8s/minio/templates/: _helpers.tpl  httproute.yaml  ingress.yaml  secret.yaml  service-headless.yaml  service.yaml  statefulset.yaml
k8s/opentelemetry-collector/: OpenTelemetryCollector.yaml
k8s/prometheus/: values.yaml
migrations/: 20250909004206_init.up.sql
public-configs/kind/: kind-config.yaml
rust/: .gitignore  Cargo.toml  Dockerfile  README.md
rust/.cargo/: config.toml
rust/backend/: Cargo.toml
rust/backend/src/: main.rs
rust/backend/src/context/: env.rs  mod.rs
rust/backend/src/db/: id.rs  mod.rs  user.rs
rust/backend/src/requests/: general.rs  mod.rs
rust/backend/src/requests/api/: mod.rs  user.rs
rust/backend_lib/: Cargo.toml
rust/backend_lib/.sqlx/: query-846a307b497d13be5639b327c946a7469ba393eaf4c1d4d6d46e6f1036b510e0.json
rust/backend_lib/src/: lib.rs  links.rs  params.rs  util.rs
rust/backend_lib/src/context/: env.rs  mod.rs
rust/backend_lib/src/db/: bff.rs  id.rs  mod.rs  user.rs
rust/backend_lib/src/middleware/: mod.rs
rust/backend_lib/src/requests/: general.rs  mod.rs
rust/backend_lib/src/requests/api/: bff.rs  mod.rs  user.rs
rust/backend_lib/src/service/: bff.rs  mod.rs  user.rs
rust/backend_old/: Cargo.toml
rust/browser_supported_img_format/: Cargo.toml
rust/browser_supported_img_format/src/: lib.rs
rust/export_shared_types/: Cargo.toml
rust/export_shared_types/src/: main.rs
rust/git_repo_root/: Cargo.toml
rust/git_repo_root/src/: lib.rs
rust/mnln_core_items/: Cargo.toml
rust/mnln_core_items/src/: id.rs  lib.rs
rust/mnln_env/: Cargo.toml
rust/mnln_env/src/: lib.rs  minio.rs  pg.rs
rust/mnln_time/: Cargo.toml
rust/mnln_time/src/: lib.rs
rust/object_storage/: Cargo.toml
rust/object_storage/src/: lib.rs
rust/openapi_spec/: Cargo.toml
rust/openapi_spec/src/: main.rs
rust/shared_items_lib/: Cargo.toml
rust/shared_items_lib/src/: id.rs  lib.rs
rust/shared_items_lib/src/service_responses/: mod.rs
scripts/: build_intermediate_images.py  expose_network.py  extract_artifacts.py  generate_certs.py  generate_secrets.py  obtain_credentials.py
scripts/bootstrap_kind_cluster/: __init__.py  __main__.py  args_handling.py  check_result.py  steps.py  steps_base.py
scripts/bootstrap_kind_cluster/steps/: add_grafana_chart_repo.py  add_opentelemetry_chart_repo.py  add_prometheus_community_chart_repo.py  build_and_push_images.py  connect_to_kind.py  create_gateway.py  create_gatewayclass.py  create_grafana_dashboard_httproute.py  create_kubernetes_dashboard_admin.py  create_kubernetes_dashboard_httproute.py  deploy_alloy.py  deploy_alloy_config.py  deploy_backend.py  deploy_backend_direct_httproute.py  deploy_cert_manager.py  deploy_gateway_api_implementation.py  deploy_grafana_dashboard.py  deploy_grafana_dashboard_direct_httproute.py  deploy_kubernetes_dashboard.py  deploy_loki.py  deploy_opentelemetry_collector.py  deploy_opentelemetry_operator.py  deploy_prometheus.py  initialize_kind_cluster.py  install_gateway_api_crds.py  install_metallb.py  start_registry.py
scripts/common/: cloud_provider_kind.py  docker.py  docker_images.py  git.py  helm.py  kind.py  kubectl.py
scripts/kind_cluster/: index.py  namespaces.py  services.py
scripts/test_kind_cluster/: __main__.py  general_tests.py
secrets/: .gitignore  README.md  jwt_signing_key.example.env  minio_buckets.example.env  minio_config.example.env  pg_config.example.env
