[workspace]
members = [
    "backend",
    "backend_lib",
    "export_shared_types",
    "openapi_spec",
    "shared_items_lib",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.42", features = [
    "clock",
    "std",
], default-features = false }
derive_more = { version = "2.0.1", features = ["display"] }
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.225", features = ["derive"] }
sha2 = "0.10.9"
specta = { version = "1.0.5", features = ["typescript", "export"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipauto = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
