[workspace]
members = [
    "backend",
    "backend_lib",
    "browser_supported_img_format",
    "export_shared_types",
    "git_repo_root",
    "mnln_core_items",
    "mnln_env",
    "mnln_time",
    "object_storage",
    "openapi_spec",
    "shared_items_lib",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
aws-creds = { version = "0.39.0", features = [
    "http-credentials",
    "attohttpc",
    "rustls-tls",
], default-features = false }
aws-region = "0.28.0"
axum = { version = "0.8.6", features = ["macros"] }
axum_typed_multipart = "0.16.4"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = [
    "clock",
    "std",
], default-features = false }
derive_more = { version = "2.0.1", features = ["display"] }
dotenv = "0.15.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
rust-s3 = { git = "https://github.com/JohnScience/rust-s3", rev = "a3cde86", features = [
    "fail-on-err",
    "tags",
    "tokio-rustls-tls",
], default-features = false } # S3 is used as a protocol, so we are still cloud provider agnostic
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
specta = { version = "1.0.5", features = ["typescript", "export"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipauto = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
