[package]
name = "backend_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
chrono.workspace = true
derive_more.workspace = true
hmac.workspace = true
jwt.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipauto.workspace = true
utoipa-swagger-ui.workspace = true
shared_items_lib = { path = "../shared_items_lib" }
