[package]
name = "object_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
aws-creds.workspace = true
aws-region.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
rust-s3.workspace = true
tokio.workspace = true
tokio-util.workspace = true
mnln_core_items = { path = "../mnln_core_items" }
mnln_env = { path = "../mnln_env" }
mnln_time = { path = "../mnln_time" }
browser_supported_img_format = { path = "../browser_supported_img_format" }
